# nwa-hydro-mcp

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  check_models.py  pyproject.toml  requirements.txt  run_mcp.ps1
.ai/: AGENTS.md  AI_ORCHESTRATION.md  GEMINI.md
.ai/context/: PROJECT_MANIFEST.md
.ai/prompts/: ai-gemini-start-session.md  architecture-fix-structure-v1.0.md  clear-memory-restart-nwa-hydro-mcp.md  plan-stack-roadmap.md  project-structure-prompt.md
.aitk/instructions/: standards.instructions.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  sync_to_huggingface.yml
data/samples/: local_station.csv
docs/status/: status_log.md  task_tracker.md
docs/strategy/: Strategic_Business_Case_v2.0_WarRoom.md  Strategic_Plan_Stack_and_Sponsors_v2.0_WarRoom.md
docs/technical_notes/: NT_000_Project_Charter_and_Architecture_v1.0.md  NT_001_AI_Driven_DevSecOps_Workflow_v1.0.md  NT_002_Gemini_Integration_and_Async_Architecture.md  flow_overview.md
scripts/: dev_gradio.ps1  dev_gradio.sh  dev_inspector.ps1  dev_inspector.sh
src/nwa_hydro/: schemas.py  server.py
src/nwa_hydro/tools/: fusion.py  intelligence.py  science.py
tests/: test_server.py  test_tools.py  verify_stack.py
